--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut finibus ri
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor erat porta sem imperdiet accumsan.
         Curabitur feugiat condimentum venenatis.\n\n</string>
     <string name="what_is_your_nickname">¿Cuál es tu apodo?</string>
+    <string name="done">Hecho</string>
 </resources>
